--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -96,7 +96,7 @@
 
                             <div class="col-sm-8">
                                 <select id="tiger_certainty_select" class="selectpicker show-tick form-control">
-                                    <option value="all">{% trans 'All' %}</option>
+                                    <option value="all">All</option>
                                     <option value="-2">Definitely not a tiger mosquito</option>
                                     <option value="-1">Probably not a tiger mosquito</option>
                                     <option value="0">Not sure</option>
@@ -111,7 +111,7 @@
 
                             <div class="col-sm-8">
                                 <select id="site_certainty_select" class="selectpicker show-tick form-control">
-                                    <option value="all">{% trans 'All' %}</option>
+                                    <option value="all">All</option>
                                     <option value="-2">Definitely not a breeding site</option>
                                     <option value="-1">Probably not a breeding site</option>
                                     <option value="0">Not sure</option>
