--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -110,7 +110,7 @@
 
                                 <div class="btn-group" id="status_grp" data-toggle="buttons">
                                     <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Pending" id="pending_btn">
-                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-time"></span> <span class="badge">{{ n_pending }}</span></label>
+                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-time" style="color:red"></span> <span class="badge">{{ n_pending }}</span></label>
                                     <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Complete" id="complete_btn">
                                         <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-check"></span> <span
                                             class="badge">{{ n_complete }}</span>
