--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -110,20 +110,22 @@
 
                                 <div class="btn-group" id="status_grp" data-toggle="buttons">
                                     <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Pending" id="pending_btn">
-                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-time" {% if n_pending > 0 %}style="color:yellow"{% endif %}></span> <span class="badge">{{ n_pending }}</span></label>
+                                        <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-time" {% if n_pending > 0 %}style="color:#FF8576"{% endif %}></span> <span class="badge">{{ n_pending }}</span></label>
                                     <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Complete" id="complete_btn">
                                         <input type="radio" name="status" autocomplete="off"><span class="glyphicon glyphicon-check"></span> <span
                                             class="badge">{{ n_complete }}</span>
                                     </label>
                                 </div>
                             </li>
+
+                            <li>
+                                <span data-toggle="modal" data-target="#myModal"><button type="button" class="btn btn-warning btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Filter" style="margin-left:5px"><span class="glyphicon glyphicon-filter" {% if orderby != 'tiger_score' or tiger_certainty != 'all' or site_certainty != 'all' or status != 'all' %}style="color:black"{% endif %}></span>
+                                </button></span>
+                            </li>
+
                             {% endblock %}
 
 
-                            <li>
-                                <span data-toggle="modal" data-target="#myModal"><button type="button" class="btn btn-warning btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Filter" style="margin-left:5px"><span class="glyphicon glyphicon-filter"></span>
-                                </button></span>
-                            </li>
                             <li>
                                 <span data-toggle="modal" data-target="#searchModal"><button type="button" class="btn btn-warning btn-sm navbar-btn"  data-toggle="tooltip" data-placement="bottom" title="Search" style="margin-left:5px"><span class="glyphicon glyphicon-search"></span></button></span>
                             </li>
